--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "apexcharts": "^4.1.0",
         "datatables.net-dt": "^2.1.4"
     }
 }
